# git-summary-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_github.sh
git_summary_agent/: __init__.py  agent.py  config.py  notion_integration.py  scheduler.py
