[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-summary-agent"
version = "0.1.0"
description = "AI-powered daily git work summary agent using Claude Agent SDK"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Kevin", email = "kevinxwj@icloud.com" }
]
keywords = [
    "git",
    "standup",
    "summary",
    "ai",
    "claude",
    "agent",
    "notion",
    "productivity",
    "developer-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
notion = [
    "notion-client>=2.0.0",
]
scheduler = [
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
]
all = [
    "notion-client>=2.0.0",
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
]

[project.scripts]
git-summary = "git_summary_agent.agent:main"
git-summary-scheduler = "git_summary_agent.scheduler:main"

[project.urls]
Homepage = "https://github.com/kevinxwj/git-summary-agent"
Repository = "https://github.com/kevinxwj/git-summary-agent"
Issues = "https://github.com/kevinxwj/git-summary-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["git_summary_agent"]
